k8s_minikube/service-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  labels:
    app: service-a
    component: service
    version: "1.4.0"
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: service-a
    component: service
    version: "1.4.0"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  labels:
    app: service-a
    component: service
    version: "1.4.0"
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: service-a
      component: service
      version: "1.4.0"
  template:
    metadata:
      labels:
        app: service-a
        component: service
        version: "1.4.0"
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: service-a
        image: registry.hub.docker.com/nivjain/node-srv-a:1.4.0
        resources:
        # requests:
        #   memory: 100M
        #   cpu: 100m
        # limits:
        #   memory: 250M
        #   cpu: 250m
        ports:
        - containerPort: 80
        imagePullPolicy: IfNotPresent #Always
